mail/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailui
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mailui
  template:
    metadata:
      labels:
        app: mailui
    spec:
      containers:
        - name: mailui
          image: ghcr.io/pmh-only/mail:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailui-worker
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mailui-worker
  template:
    metadata:
      labels:
        app: mailui-worker
    spec:
      containers:
        - name: mailui-worker
          image: ghcr.io/pmh-only/mail-worker:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildemo
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: maildemo
  template:
    metadata:
      labels:
        app: maildemo
    spec:
      containers:
        - name: maildemo
          image: ghcr.io/pmh-only/mail:latest
