mail/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mailui
spec:
  selector:
    app: mailui
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: maildemo
spec:
  selector:
    app: maildemo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
